# SplitFile

./: .gitignore  README.md
Client_FE/: index.html  index_private.html
Server_BE/: Dockerfile  Makefile  docker-compose-db.yml  docker-compose.yml  hello.py  pyproject.toml  run_app.py
Server_BE/core/abstractions/: __init__.py  singeton.py
Server_BE/core/async_redis/: client.py  redis_lock_manager.py
Server_BE/core/base_application/: base.py
Server_BE/core/constants/: __init__.py  logger.py  minio.py  rabbitmq.py
Server_BE/core/context_var/: __init__.py
Server_BE/core/database/: __init__.py  db_postgresql.py  func.py
Server_BE/core/events/: __init__.py  startup_events.py
Server_BE/core/format_log/: init_logger.py
Server_BE/core/middlewares/: __init__.py  db_router.py  log_request.py  router.py
Server_BE/core/minio_manage/: __init__.py  client.py  manage.py
Server_BE/core/rabbitmq/: __init__.py  async_client.py  async_consumer.py  base.py
Server_BE/core/schema/: __init__.py  api_response.py  exception.py
Server_BE/core/settings/: base_setting.py  minio_setting.py  rabbitmq_setting.py  redis_setting.py  service_setting.py
Server_BE/envs/: .env_sample
Server_BE/src/: main.py  views.py
Server_BE/src/app/controllers/: storage_controller.py
Server_BE/src/app/migrations/app/: 0_20250705235249_init.py  1_20250706000808_update.py  2_20250706003047_update.py  3_20250706013454_update.py
Server_BE/src/app/models/: __init__.py  storage.py
Server_BE/src/app/utils/: rmq_client.py
Server_BE/src/app/views/: __init__.py  storage_views.py
